fix: security auth